# photon_infer

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  debug_complex_ops.cpp  debug_embedding.cpp  debug_first_token.cpp  debug_ops.cpp  test_cuda_embed.cpp
demo/: CMakeLists.txt  batched_infer_multi_prompts.cpp  compare_batching_methods.cpp  llama_infer.cpp  test_partitioned_attention.cpp
docker/: Dockerfile  run.sh
docs/: PR1_summary.md
examples/: CMakeLists.txt  example_basic.cpp
include/photon/arch/: llama_model.hpp  transformer_block.hpp
include/photon/core/: allocator.hpp  buffer.hpp  error.hpp  quant.hpp  tensor.hpp  types.hpp
include/photon/model/: checkpoint.hpp  config.hpp  kv_cache_manager.hpp  llama_model.hpp  model_loader.hpp  raw_model_data.hpp  tokenizer.hpp  transformer_block.hpp
include/photon/ops/: add.hpp  embedding.hpp  matmul.hpp  mha.hpp  operator.hpp  rmsnorm.hpp  rope.hpp  swiglu.hpp
include/photon/ops/kernels/: add_kernel.hpp  cuda_kernels.hpp  embedding_kernel.hpp  matmul_kernel.hpp  mha_kernel.hpp  rmsnorm_kernel.hpp  rope_kernel.hpp  swiglu_kernel.hpp
include/photon/ops/kernels/cuda/: add_kernel.cuh  batched_mha_kernel.cuh  embedding_kernel.cuh  kv_cache_kernel.cuh  matmul_cublaslt.cuh  matmul_cublaslt_int8.cuh  matmul_dequant_cached.cuh  matmul_gemm_quant.cuh  matmul_gemv_quant.cuh  matmul_kernel.cuh  matmul_kernel_quant.cuh  matmul_kernel_quant_fp16.cuh  matmul_kernel_quant_v2.cuh  mha_kernel.cuh  rmsnorm_kernel.cuh  rope_kernel.cuh  sampling_kernel.cuh  swiglu_kernel.cuh
include/photon/runtime/: kv_cache_manager.hpp
include/photon/scheduler/: continuous_batch_engine.hpp  continuous_batch_scheduler.hpp  inference_request.hpp
src/: CMakeLists.txt
src/arch/: llama_model.cpp  transformer_block.cpp
src/core/: allocator.cu  dummy.cpp  quant.cpp  tensor.cpp
src/model/: checkpoint.cpp  config.cpp  kv_cache_manager.cpp  llama_model.cpp  model_loader.cpp  raw_model_data.cpp  tokenizer.cpp  transformer_block.cpp
src/ops/: add.cpp  embedding.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
src/ops/kernels/cuda/: add_kernel.cu  batched_mha_kernel.cu  embedding_kernel.cu  kv_cache_kernel.cu  matmul_cublaslt.cu  matmul_dequant_cached.cu  matmul_gemm_quant.cu  matmul_gemv_quant.cu  matmul_kernel.cu  matmul_kernel_quant.cu  matmul_kernel_quant_fp16.cu  matmul_kernel_quant_v2.cu  mha_kernel.cu  rmsnorm_kernel.cu  rope_kernel.cu  sampling_kernel.cu  swiglu_kernel.cu
src/runtime/: kv_cache_manager.cpp
tests/: CMakeLists.txt
tests/core/: test_tensor.cpp
tests/cuda/: CMakeLists.txt  test_step_by_step.cpp
tests/model/: test_llama32_integration.cpp  test_llama_model.cpp  test_model_loader.cpp  test_tokenizer.cpp
tests/ops/: test_embedding.cpp  test_matmul.cpp  test_mha.cpp  test_swiglu.cpp
tools/: quantize_model.cpp
web/: CMakeLists.txt  web_server.cpp
web/static/: index.html
